--- a/wesport/static/main.css
+++ b/wesport/static/main.css
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #5f788a;
 }
 
-.site-header .navbar-nav .nav-link {
+.site-header .navbar-nav .nav-link .dropdown  {
   color: #cbd5db;
 }
 
