--- a/wesport/templates/player_home.html
+++ b/wesport/templates/player_home.html
@@ -88,6 +88,35 @@
             </div>
         {% endfor %}
     </fieldset>
+    <fieldset class="form-group">
+        <legend class="border-bottom mb-4">Past events</legend>
+        {% for event in past_events %}
+            <div class="content-section">
+                <h2><a class="article-title" href="{{  url_for('player.event', event_id=event.id) }}" target="_blank">Event : {{  event.title }}</a></h2>
+                {% for field in fields %}
+                    {% if field.id == event.field_id  %}
+                        {% for club in clubs %}
+                            {% if club.id == field.club_id %}
+                                <small>
+                                    <p class="article-content">{{ club.name }} - {{ field.field_name }}</p>
+                                </small>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                {% endfor %}
+                <p class="article-content">Date: {{ event.date.strftime("%d-%m-%Y") }}</p>
+                <p class="article-content">Start Time: {{ event.startTime }}</p>
+                {% for participants in participants %}
+                    {% if participants.booking == event.id %}
+                        <div>
+                            <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + participants.image_file) }}>
+                            <small class="article-content">{{ participants.name }} {{ participants.surname }}</small>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+        {% endfor %}
+    </fieldset>
 {% endblock content %}
 {% block right_content %}
     <h3>My Sidebar</h3>
@@ -100,9 +129,10 @@
         </div>
         <ul class="list-group">
             <a class="list-group-item list-group-item-light" href="{{ url_for('player.new_booking', location='nolocation') }}">New Booking</a>
-            <li class="list-group-item list-group-item-light">My Bookings</li>
-            <li class="list-group-item list-group-item-light">My Events</li>
-            <li class="list-group-item list-group-item-light">Public Events</li>
+            <a class="list-group-item list-group-item-light" href="{{ url_for('player.my_bookings') }}">My Bookings</a>
+            <a class="list-group-item list-group-item-light" href="{{ url_for('player.my_events') }}">My Events</a>
+            <a class="list-group-item list-group-item-light" href="{{ url_for('player.events') }}">Public Events</a>
+            <a class="list-group-item list-group-item-light" href="{{ url_for('player.past_events') }}">Past Events</a>
             <a class="list-group-item list-group-item-light" href="{{ url_for('main.account') }}">Settings</a>
         </ul>
 {% endblock %}
