--- a/wesport/templates/home.html
+++ b/wesport/templates/home.html
@@ -1,10 +1,19 @@
 {% extends "layout_home.html" %}
 {% block content %}
     {% if current_user.is_authenticated==false %}
-            <h1><b>No more excuses not to play sports! </b></h1>
-            <h2>Already xxx users and xx clubs are part of our community in all regions of Italy!</h2>
             <div class="container">
-            <img class="mySlides" src="../static/home_images/batigol_fiore.jpg"
+            <h1><b>No more excuses not to play sports! </b></h1>
+            <h2>You're not alone! Play the sport you love and get to know new people</h2>
+            </div>
+            <div class="container" >
+            <h2>Check this out:</h2>
+            <video width="100%" style="margin: 0 auto;" controls>
+                <source src="../static/home_images/Wesports - Kickstarter.mp4">
+            </video>
+            </div>
+
+            <div class="container">
+                <img class="mySlides" src="../static/home_images/batigol_fiore.jpg"
                  alt="Batigol" title="Batigol" width="400px">
             <img class="mySlides" src="../static/home_images/rosina_toro.jpg"
                  alt="Rosina" title="Rosina">
@@ -84,5 +93,10 @@
             </script>
             </div>
 
+
+
+
+
     {% endif %}
 {% endblock content %}
+
