--- a/wesport/templates/layout.html
+++ b/wesport/templates/layout.html
@@ -106,11 +106,13 @@
             {% block content %}
             {% endblock %} <!--main page content block-->
         </div>
+        {% if current_user.is_authenticated %}
         <div class="col-md-4">
           <div class="content-section">
               {% block right_content %}{% endblock %} <!--right side page content block-->
           </div>
         </div>
+      {% endif  %}
       </div>
     </main>
 
@@ -121,6 +123,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+
 </html>
 
 <style>
