Inserted images that change with button in home without login refining FE overall

--- a/wesport/templates/home.html
+++ b/wesport/templates/home.html
@@ -3,7 +3,7 @@
     {% if current_user.is_authenticated==false %}
             <div class="container">
             <h1><b>No more excuses not to play sports! </b></h1>
-            <h2>You're not alone! Play the sport you love and get to know new people</h2>
+            <h2>You're not alone! Play the sports you love and get to know new people!</h2>
             </div>
             <div class="container" >
             <h2>Check this out:</h2>
