Footer, inserted video in home page About started To be fixed: - right bar (to be kept only in the user page) - Font - Text not going out of space - Choose background

--- a/wesport/templates/layout.html
+++ b/wesport/templates/layout.html
@@ -115,7 +115,25 @@
       {% endif  %}
       </div>
     </main>
-
+    <footer>
+        <div class="foot">
+            <style>
+                .foot{
+                    margin-top: 50px;
+                    margin-bottom: -3px;
+                    background-color: #fe7b1f;
+                    color: #ffffff;
+                    left: 0;
+                    bottom: 0;
+                    width: 100%;
+                    text-align: center;
+                    position: absolute;
+                }
+            </style>
+                <h>Daje</h>
+            <p>Questo è er footer, ce scrivemo quello che volete</p>
+        </div>
+    </footer>
     <!-- Optional JavaScript -->
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
