Footer, inserted video in home page About started To be fixed: - right bar (to be kept only in the user page) - Font - Text not going out of space - Choose background - Fix right sidebar in user page (not symmetrical)

--- a/wesport/templates/layout.html
+++ b/wesport/templates/layout.html
@@ -85,6 +85,7 @@
                         </script>
 
                     </a>
+                    <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
                 {% endif %}
             </div>
           </div>
@@ -92,7 +93,7 @@
       </nav>
     </header>
     <main role="main" class="container">
-      <div class="row">  <!--container to set where the flash messages arte displayed-->
+      <div class="row" style="margin-right: 180px">  <!--container to set where the flash messages arte displayed-->
         <div class="col-md-8">
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
