--- a/wesport/templates/player_home.html
+++ b/wesport/templates/player_home.html
@@ -110,11 +110,12 @@
 <style>
 
     .content-section {
-        width: auto
+        width: auto;
+        margin-right: 12.5%;
     }
 
     .media {
-        width: auto
+        width: auto;
     }
     .media-body{
         width: auto;
