--- a/wesport/static/main.css
+++ b/wesport/static/main.css
@@ -32,6 +32,8 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 20px;
   width: 400px;
   text-overflow: ellipsis;
+  position: relative;
+  margin-left: 50%;
 }
 
 .article-title {
