--- a/wesport/templates/login.html
+++ b/wesport/templates/login.html
@@ -45,7 +45,7 @@
             </form>
         </div>
         <div class="border-top pt-3">
-            <small class="text-muted">
+            <small class="text-muted" style="margin-left: 50%">
                 Need An Account? <a class="ml-2" href="{{ url_for('main.register') }}">Sign Up Now</a>
             </small>
         </div>
