--- a/wesport/templates/login.html
+++ b/wesport/templates/login.html
@@ -44,8 +44,8 @@
                 </div>
             </form>
         </div>
-        <div class="border-top pt-3">
-            <small class="text-muted" style="margin-left: 50%">
+        <div class="border-top pt-3" style="margin-left: 50%">
+            <small class="text-muted" >
                 Need An Account? <a class="ml-2" href="{{ url_for('main.register') }}">Sign Up Now</a>
             </small>
         </div>
