--- a/wesport/templates/layout.html
+++ b/wesport/templates/layout.html
@@ -62,29 +62,14 @@
                 {% else %}
                     <a class="nav-item nav-link" href="{{ url_for('main.login') }}">Login</a>
                     <!--<a class="nav-item nav-link" href="{{ url_for('main.register') }}">-->
-                    <a class="nav-item nav-link">
-                    <div class="open-button" onclick="openForm()">Register</div>
-                        <div class="form-popup" id="myForm">
-                            <div  class="form-container">
-                                <h1>User type:</h1>
-
-                                <button class=btn onclick='window.location.href="{{ url_for('player.player_register')}}"'>Player</button>
-                                <button class=btn onclick='window.location.href="{{ url_for('club.club_register') }}"'>Club</button>
-                                <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-                            </div>
+                     <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" style="background-color: #FE7B1F; border-color: #FE7B1F;"
+                                type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Register</button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item active" href="{{ url_for('player.player_register') }}">Player</a>
+                            <a class="dropdown-item active" href="{{ url_for('club.club_register') }}">Club</a>
                         </div>
-
-                        <script>
-                        function openForm() {
-                          document.getElementById("myForm").style.display = "block";
-                        }
-
-                        function closeForm() {
-                          document.getElementById("myForm").style.display = "none";
-                        }
-                        </script>
-
-                    </a>
+                    </div>
                     <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
                 {% endif %}
             </div>
@@ -146,6 +131,16 @@
 </html>
 
 <style>
+
+    .dropdown-item.active{
+        background-color: #ffffff;
+        color:#FE7B1F;
+    }
+
+    .dropdown-item:hover{
+        background-color: #dddddd;
+    }
+
 .open-button {
   color: white;
     cursor: pointer;
