--- a/wesport/templates/layout_home.html
+++ b/wesport/templates/layout_home.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
@@ -65,7 +66,7 @@
                 {% else %}
                     <a class="nav-item nav-link" href="{{ url_for('main.login') }}">Login</a>
                     <!--<a class="nav-item nav-link" href="{{ url_for('main.register') }}">Register</a>-->
-                     <div class="dropdown">
+                     <div class="dropdown" style="width=20px;">
                         <button class="btn btn-secondary dropdown-toggle" style="background-color: #FE7B1F; border-color: #FE7B1F;"
                                 type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Register</button>
                         <div class="dropdown-menu">
@@ -83,7 +84,7 @@
       </nav>
     </header>
     <main role="main" class="container">
-      <div class="row">  <!--container to set where the flash messages arte displayed-->
+      <div class="text-center" style="margin-top: 20px;">  <!--container to set where the flash messages arte displayed-->
        <!-- <div class="col-md-8"> -->
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
