Footer, background inserted video in home page Register fixed Home page centered Page "About" started To be fixed: - right bar (keep only in the user page, fix layout) - Font - Text not going out of space - Choose background - Fix right sidebar in user page (not symmetrical) - Margin between body and header

--- a/wesport/static/main.css
+++ b/wesport/static/main.css
@@ -17,7 +17,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .site-header .navbar-nav .nav-link:hover {
-  color: #ffffff;
+  color: #FE7B1F;
 }
 
 .site-header .navbar-nav .nav-link.active {
