--- a/wesport/templates/book.html
+++ b/wesport/templates/book.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-        <div class="content-section">
+        <div class="content-section" style="margin-bottom: 30px;">
             <form method="post" action="">
                 {{ form.hidden_tag() }}
                 <fieldset class="form-group">
