--- a/wesport/templates/layout_home.html
+++ b/wesport/templates/layout_home.html
@@ -35,7 +35,7 @@
     <div>
     <img style="width: 100%; height: 100%; z-index: -1; position: fixed; opacity: 0.2;" src="..\static\home_images\rugby.jpg">
     <header class="site-header">
-      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top" style="background-color: #fe7b1f">
         <div class="container">
             {% if current_user.is_authenticated %}
                     {% if current_user.urole == 'Player' %}
