Footer, background inserted video in home page Register fixed Home page centered Page "About" started To be fixed: - right bar (keep only in the user page, fix layout) - Font - Text not going out of space - Choose background - Fix right sidebar in user page (not symmetrical) - Margin between body and header

--- a/wesport/templates/layout.html
+++ b/wesport/templates/layout.html
@@ -94,7 +94,7 @@
         </div>
         {% if current_user.is_authenticated %}
         <div class="col-md-4">
-          <div class="content-section">
+          <div class="content-section" style="width:340px; ">
               {% block right_content %}{% endblock %} <!--right side page content block-->
           </div>
         </div>
