--- a/wesport/templates/layout_home.html
+++ b/wesport/templates/layout_home.html
@@ -32,10 +32,11 @@
     {% endif %}
 </head>
 <body>
+<img style="width: 100%; height: 100%; z-index: -1; position: fixed; opacity: 0.2;" src="..\static\home_images\rugby.jpg">
     <div>
-    <img style="width: 100%; height: 100%; z-index: -1; position: fixed; opacity: 0.2;" src="..\static\home_images\rugby.jpg">
+
     <header class="site-header">
-      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top" style="background-color: #fe7b1f">
+      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
             {% if current_user.is_authenticated %}
                     {% if current_user.urole == 'Player' %}
@@ -66,7 +67,7 @@
                 {% else %}
                     <a class="nav-item nav-link" href="{{ url_for('main.login') }}">Login</a>
                     <!--<a class="nav-item nav-link" href="{{ url_for('main.register') }}">Register</a>-->
-                     <div class="dropdown" style="width=20px;">
+                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" style="background-color: #FE7B1F; border-color: #FE7B1F;"
                                 type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Register</button>
                         <div class="dropdown-menu">
@@ -103,31 +104,20 @@
 
     <footer>
         <div class="foot">
-            <style>
-                .foot{
-                    margin-top: 50px;
-                    margin-bottom: -30px;
-                    background-color: #fe7b1f;
-                    color: #ffffff;
-                    left: 0;
-                    bottom: 0;
-                    width: 100%;
-                    text-align: center;
-                }
-            </style>
                 <h>Daje</h>
             <p>Questo è er footer, ce scrivemo quello che volete</p>
         </div>
     </footer>
 
 
+    </div>
     <!-- Optional JavaScript -->
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </div>
+
 </body>
 </html>
 
