--- a/wesport/templates/layout.html
+++ b/wesport/templates/layout.html
@@ -30,6 +30,9 @@
     {% endif %}
 </head>
 <body>
+<div>
+<div class="page-container">
+    <div class="content-wrap">
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top" style="background-color: #fe7b1f">
         <div class="container">
@@ -101,31 +104,27 @@
       {% endif  %}
       </div>
     </main>
-    <footer>
-        <div class="foot">
-            <style>
-                .foot{
-                    margin-top: 50px;
-                    margin-bottom: -3px;
-                    background-color: #fe7b1f;
-                    color: #ffffff;
-                    left: 0;
-                    bottom: 0;
-                    width: 100%;
-                    text-align: center;
-                    position: absolute;
-                }
-            </style>
+    </div>
+
+
+    <footer class="page-footer">
+      <div>
                 <h>Daje</h>
             <p>Questo è er footer, ce scrivemo quello che volete</p>
+                    </div>
+            </footer>
+
+
+
+
         </div>
-    </footer>
     <!-- Optional JavaScript -->
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</div>
 </body>
 
 </html>
