Footer and header bar adjusted inserted video in home page Register fixed Home page centered Page "About" started To be fixed: - right bar (keep only in the user page, fix layout) - Font - Text not going out of space - Fix right sidebar in user page (not symmetrical) - Margin between body and header

--- a/wesport/templates/about.html
+++ b/wesport/templates/about.html
@@ -1,9 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="container"></div>
+    <div style="margin-bottom: 50px;">
+    <div class="container">
         <h1>Who we are</h1>
         <h4>We are 6 students from from Polytechnic University of Turin who are love Information Systems and Sports</h4>
-    </div>
+   </div>
     <div class="container">
         <h1>What is Wesports</h1>
         <h4>Wesports is a platform we developed so that people new in town can make new friends and keep practising the sports they love
@@ -12,8 +13,10 @@
          because your friends are paccons!</h4>
     </div>
 
+
     <div class="container">
         <h1></h1>
         <h4></h4>
+    </div>
     </div>
 {% endblock content %}
