--- a/wesport/templates/layout.html
+++ b/wesport/templates/layout.html
@@ -81,7 +81,7 @@
       </nav>
     </header>
     <main role="main" class="container">
-      <div class="row" style="margin-right: 180px">  <!--container to set where the flash messages arte displayed-->
+      <div class="row" >  <!--container to set where the flash messages arte displayed-->
         <div class="col-md-8">
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
@@ -109,10 +109,10 @@
 
     <footer class="page-footer">
       <div>
-                <h>Daje</h>
+          <h>Daje</h>
             <p>Questo è er footer, ce scrivemo quello che volete</p>
-                    </div>
-            </footer>
+      </div>
+    </footer>
 
 
 
