--- a/wesport/static/main.css
+++ b/wesport/static/main.css
@@ -94,7 +94,7 @@ a.article-title:hover {
   width: 200px
 }
 
-.foot {
+.foot-home {
      margin-top: 50px;
      margin-bottom: -30px;
      background-color: #fe7b1f;
