--- a/wesport/templates/layout_home.html
+++ b/wesport/templates/layout_home.html
@@ -103,7 +103,7 @@
     </main>
 
     <footer>
-        <div class="foot">
+        <div class="foot-home">
                 <h>Daje</h>
             <p>Questo è er footer, ce scrivemo quello che volete</p>
         </div>
