--- a/wesport/templates/about.html
+++ b/wesport/templates/about.html
@@ -1,10 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div style="margin-bottom: 50px;">
     <div class="container">
         <h1>Who we are</h1>
         <h4>We are 6 students from from Polytechnic University of Turin who are love Information Systems and Sports</h4>
-   </div>
+    </div>
     <div class="container">
         <h1>What is Wesports</h1>
         <h4>Wesports is a platform we developed so that people new in town can make new friends and keep practising the sports they love
@@ -12,11 +11,22 @@
         book a field in a smart and fast way, without wasting time, and inviting they friends as well, or just find someone to play with
          because your friends are paccons!</h4>
     </div>
-
-
+    <div class="container">
+        <h1>What is Wesports</h1>
+        <h4>Wesports is a platform we developed so that people new in town can make new friends and keep practising the sports they love
+        without being worried about the fact that they do not have friends to play with or they do not know places where to play. Or just
+        book a field in a smart and fast way, without wasting time, and inviting they friends as well, or just find someone to play with
+         because your friends are paccons!</h4>
+    </div>
+    <div class="container">
+        <h1>What is Wesports</h1>
+        <h4>Wesports is a platform we developed so that people new in town can make new friends and keep practising the sports they love
+        without being worried about the fact that they do not have friends to play with or they do not know places where to play. Or just
+        book a field in a smart and fast way, without wasting time, and inviting they friends as well, or just find someone to play with
+         because your friends are paccons!</h4>
+    </div>
     <div class="container">
         <h1></h1>
         <h4></h4>
-    </div>
     </div>
 {% endblock content %}
