--- a/wesport/templates/login.html
+++ b/wesport/templates/login.html
@@ -44,7 +44,7 @@
                 </div>
             </form>
         </div>
-        <div class="border-top pt-3" style="margin-left: 50%">
+        <div class="border-top pt-3" style="margin-bottom: 20px; max-width: 400px;">
             <small class="text-muted" >
                 Need An Account? <a class="ml-2" href="{{ url_for('main.register') }}">Sign Up Now</a>
             </small>
