--- a/wesport/templates/login.html
+++ b/wesport/templates/login.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+        <div>
         <div class="content-section">
             <form method="post" action="">
                 {{ form.hidden_tag() }}
