Footer and header bar adjusted Layout about adjusted (same for logged in or not) Page "About" started To be fixed: - right bar (keep only in the user page, fix layout) - Font - Text not going out of space - Fix right sidebar in user page (not symmetrical) - Margin between body and header

--- a/wesport/templates/player_home.html
+++ b/wesport/templates/player_home.html
@@ -22,7 +22,7 @@
                 {% for participants in participants %}
                     {% if participants.booking == event.id %}
                         <div>
-                            <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + participants.image_file) }}>
+                            <!--<img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + participants.image_file) }}>-->
                             <small class="article-content">{{ participants.name }} {{ participants.surname }}</small>
                         </div>
                     {% endif %}
