--- a/wesport/templates/about.html
+++ b/wesport/templates/about.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout_about.html" %}
 {% block content %}
     <div class="container">
         <h1>Who we are</h1>
