--- a/wesport/templates/register.html
+++ b/wesport/templates/register.html
@@ -63,7 +63,7 @@
                 </div>
             </form>
         </div>
-        <div class="border-top pt-3" style="max-width: 400px;">
+        <div id="under-register" class="border-top pt-3">
             <small class="text-muted">
                 Already Have An Account? <a class="ml-2" href="{{ url_for('main.login') }}">Sign In</a>
             </small>
