Footer and header bar adjusted Layout About adjusted (same for logged in or not) Page "About" started chat and participants formatted (scroll)
To be fixed:
- right bar (keep only in the user page, fix layout)
- Font
- Text not going out of space
- Fix right sidebar in user page (not symmetrical)
- Margin between body and header
- image too big

--- a/wesport/templates/player_home.html
+++ b/wesport/templates/player_home.html
@@ -19,6 +19,8 @@
                 {% endfor %}
                 <p class="article-content">Date: {{ event.date.strftime("%d-%m-%Y") }}</p>
                 <p class="article-content">Start Time: {{ event.startTime }}</p>
+                <p class="article-content">Participants: </p>
+                <div class="border 3-pt"  style="height:6.5rem; overflow-y: scroll;">
                 {% for participants in participants %}
                     {% if participants.booking == event.id %}
                         <div>
@@ -27,6 +29,7 @@
                         </div>
                     {% endif %}
                 {% endfor %}
+                </div>
             </div>
         {% endfor %}
     </fieldset>
