--- a/wesport/templates/layout.html
+++ b/wesport/templates/layout.html
@@ -97,7 +97,7 @@
         </div>
         {% if current_user.is_authenticated %}
         <div class="col-md-4">
-          <div class="content-section" style="width:340px; ">
+          <div class="content-section" style="max-height: 80vh; overflow-y: scroll; width: 340px; ">
               {% block right_content %}{% endblock %} <!--right side page content block-->
           </div>
         </div>
