Footer and header bar adjusted Layout About adjusted (same for logged in or not) Page "About" started chat and participants formatted (scroll)
To be fixed:
- right bar (keep only in the user page, fix layout)
- Font
- Text not going out of space
- Fix right sidebar in user page (not symmetrical)
- Margin between body and header
- image too big

--- a/wesport/templates/layout_login_register.html
+++ b/wesport/templates/layout_login_register.html
@@ -82,7 +82,7 @@
     </header>
     <main role="main" class="container">
       <div class="row" >  <!--container to set where the flash messages arte displayed-->
-        <div class="col-md-8" style="margin-bottom: 50px;">
+        <div class="col-md-8" style="margin-left: 25%; margin-bottom: 50px;">
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                     {% for category , message in messages %}
